# tempo

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: chain.rs
examples/: demo.rs  timezone.rs  zero_deps.rs
src/: datetime.rs  duration.rs  format.rs  interval.rs  lib.rs  locale.rs
tests/: datetime.rs  duration.rs  edges.rs  format_roundtrip.rs  format_roundtrips_more.rs  from_format_polish.rs  integration.rs  month_math.rs  static_zones.rs  zero_deps.rs
