[package]
name = "tempo"
version = "0.1.0"
edition = "2021"
description = "Luxon.js in Rust — immutable, chainable, IANA timezone-aware dates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyoussef07/tempo"
keywords = ["date", "time", "luxon", "chrono", "timezone"]
categories = ["date-and-time"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
tz = ["chrono", "chrono-tz"]
serde = ["dep:serde", "chrono?/serde"]
bench = []

[[bench]]
name = "chain"
harness = false
