[package]
name = "tempotime"
version = "0.1.3"
edition = "2021"
description = "Luxon.js in Rust — immutable, chainable, IANA timezone-aware dates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyoussef07/tempotime"
keywords = ["date", "time", "luxon", "chrono", "timezone"]
categories = ["date-and-time"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
# Keep `std` as a feature so we can gate std-only APIs later. For backward
# compatibility we enable it by default so existing users see the same behavior.
default = ["std"]
std = []
chrono = ["dep:chrono"]
tz = ["chrono", "chrono-tz"]
serde = ["dep:serde"]
bench = []

[[bench]]
name = "chain"
harness = false
